updated gnirsPipeline.py and recipes/defaultConfig.cfg

--- a/recipes/defaultConfig.cfg
+++ b/recipes/defaultConfig.cfg
@@ -5,7 +5,7 @@
 [defaults]
 niftyVersion = '1.0.1'
 manualMode = False
-over = False
+overwrite = False
 scienceOneDExtraction = True
 scienceDirectoryList = []
 telluricDirectoryList = []
@@ -40,8 +40,8 @@ sortTellurics = True
 telluricTimeThreshold = 5400
 
 [calibrationReductionConfig]
-baselineCalibrationStart = 1
-baselineCalibrationStop = 4
+Start = 1
+Stop = 4
 cleanir_arcs = False
 cleanir_IRflats = False
 cleanir_QHflats = False
@@ -62,8 +62,8 @@ skySubtraction = True
 cleanir = False
 
 [telluricCorrectionConfig]
-telluricCorrectionStart = 1
-telluricCorrectionStop = 9
+Start = 1
+Stop = 9
 hLineMethod = 'vega'
 hLineInter = False
 continuumInter = False
@@ -73,15 +73,15 @@ standardStarSpecTemperature = ''
 standardStarMagnitude = ''
 standardStarRA = ''
 standardStarDec = ''
-standardStarBand = ''  ## check how is this used in the code
+standardStarBand = ''
 
 [fluxCalbrationConfig]
-fluxCalibrationStart = 1
-fluxCalibrationStop = 6
+Start = 1
+Stop = 6
 
 [combineOrdersConfig]
-combineOrdersStart = 1
-combineOrdersStop = 6
+Start = 1
+Stop = 6
 #mergeType = 'median'
 #use_pq_offsets = True
 #im3dtran = True
