--- a/recipes/defaultConfig.cfg
+++ b/recipes/defaultConfig.cfg
@@ -3,7 +3,7 @@
 # Each section lists parameters required by a pipeline step.
 
 [defaults]
-niftyVersion = '1.0.1'
+niftyVersion = "1.0.1"
 manualMode = False
 overwrite = False
 scienceOneDExtraction = True
@@ -28,16 +28,20 @@ telluricCorrection = True
 fluxCalibration = True 
 ## runs the CombineOrderXD.py module from XDGNIRS; must to be set to False for longslit mode
 combineOrders = True
-telluricCorrectionMethod = 'gnirs'
-fluxCalibrationMethod = 'gnirs'
+telluricCorrectionMethod = "gnirs"
+fluxCalibrationMethod = "gnirs"
+
+#[readHeadersConfig]
+#Start = 1
+#Stop = 2
 
 [sortConfig]
-rawPath = ''
-program = ''
-proprietaryCookie = ''
-skyThreshold = 3.5
+rawPath = rawData/
+program = ""
+proprietaryCookie = ""
+#skyThreshold = 3.5
 sortTellurics = True
-telluricTimeThreshold = 5400
+telluricTimeThreshold = 5400.0
 
 [calibrationReductionConfig]
 Start = 1
@@ -64,16 +68,16 @@ cleanir = False
 [telluricCorrectionConfig]
 Start = 1
 Stop = 9
-hLineMethod = 'vega'
+hLineMethod = "vega"
 hLineInter = False
 continuumInter = False
 telluricInter = False
 tempInter = False
-standardStarSpecTemperature = ''
-standardStarMagnitude = ''
-standardStarRA = ''
-standardStarDec = ''
-standardStarBand = ''
+standardStarSpecTemperature = ""
+standardStarMagnitude = ""
+standardStarRA = ""
+standardStarDec = ""
+standardStarBand = ""
 
 [fluxCalbrationConfig]
 Start = 1
@@ -85,5 +89,9 @@ Stop = 6
 #mergeType = 'median'
 #use_pq_offsets = True
 #im3dtran = True
+
+#[writeDataSheetConfig]
+#Start = 1
+#Stop = 2
 
 # Good luck with your Science!
