completed gnirsData, gnirsHeaders, and the first function in gnirsSort

--- a/recipes/defaultConfig.cfg
+++ b/recipes/defaultConfig.cfg
@@ -1,5 +1,4 @@
 # Nifty configuration file.
-#
 # Each section lists parameters required by a pipeline step.
 
 [defaults]
@@ -12,8 +11,10 @@ telluricDirectoryList = []
 calibrationDirectoryList = []
 
 [gnirsPipelineConfig]
-## reads all required header keywords and imports them with specific variable names in every step of the pipeline
-#readHeaders = True
+## searches or downloads the required GNIRS data
+data = True
+## reads all required header keywords and loads them in the beginning of every step of the pipeline
+headers = True
 ## combines the ObsidentifyXD.py, mklist.csh, FindSpectra.py modules from XDGNIRS; cleanir.py module is not used as a part of this pipeline
 sort = True
 ## combines the StatsAnsPrepareXD.py, MakeFlatfieldXD.py, SdistorAndWLCalibXD.py modules from XDGNIRS
@@ -26,20 +27,20 @@ scienceReduction = True
 telluricCorrection = True
 ## combines the mag2mass.py and FluxCalibXD.py modules from XDGNIRS
 fluxCalibration = True 
-## runs the CombineOrderXD.py module from XDGNIRS; must to be set to False for longslit mode
-combineOrders = True
+## runs the CombineOrdersXD.py module from XDGNIRS; must to be set to False for longslit mode
+combineOrdersXD = True
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
 
-#[readHeadersConfig]
-#Start = 1
-#Stop = 2
+[dataConfig]
+rawPath = rawData/
+program = ""
+
+[headersConfig]
 
 [sortConfig]
 rawPath = rawData/
-program = ""
 proprietaryCookie = ""
-#skyThreshold = 3.5
 sortTellurics = True
 telluricTimeThreshold = 5400.0
 
@@ -83,7 +84,7 @@ standardStarBand = ""
 Start = 1
 Stop = 6
 
-[combineOrdersConfig]
+[combineOrdersXDConfig]
 Start = 1
 Stop = 6
 #mergeType = 'median'
@@ -91,7 +92,5 @@ Stop = 6
 #im3dtran = True
 
 #[writeDataSheetConfig]
-#Start = 1
-#Stop = 2
 
 # Good luck with your Science!
