started working on gnirsBaselineCalibration, updated REDAME.md with the revised schedule, manually created config.cfg and the required directories for further reduction steps

--- a/recipes/defaultConfig.cfg
+++ b/recipes/defaultConfig.cfg
@@ -11,24 +11,15 @@ telluricDirectoryList = []
 calibrationDirectoryList = []
 
 [gnirsPipelineConfig]
-## searches or downloads the required GNIRS data
-data = True
-## reads all required header keywords and loads them in the beginning of every step of the pipeline
-headers = True
-## combines the ObsidentifyXD.py, mklist.csh, FindSpectra.py modules from XDGNIRS; cleanir.py module is not used as a part of this pipeline
-sort = True
-## combines the StatsAnsPrepareXD.py, MakeFlatfieldXD.py, SdistorAndWLCalibXD.py modules from XDGNIRS
-calibrationReduction = True
-## combines the StatsAnsPrepareXD.py, ReducingXD.py, CombineSpectraXD.py, ExtractSpectraXD.py modules from XDGNIRS
-telluricReduction = True
-## --- same as for telluricReduction in one step gnirxtyReduce.py ---
-scienceReduction = True
-## combines the HlineXD.py and TelluricXD.py modules from XDGNIRS
-telluricCorrection = True
-## combines the mag2mass.py and FluxCalibXD.py modules from XDGNIRS
-fluxCalibration = True 
-## runs the CombineOrdersXD.py module from XDGNIRS; must to be set to False for longslit mode
-combineOrdersXD = True
+data = True  ; searches for or downloads the required GNIRS data
+headers = True  ; reads all required header keywords and loads them in the beginning of every step of the pipeline
+sort = True  ; combines the ObsidentifyXD.py, mklist.csh, FindSpectra.py modules from XDGNIRS; cleanir.py module is not used as a part of this pipeline
+calibrationReduction = True  ; combines the StatsAnsPrepareXD.py, MakeFlatfieldXD.py, SdistorAndWLCalibXD.py modules from XDGNIRS
+telluricReduction = True  ; combines the StatsAnsPrepareXD.py, ReducingXD.py, CombineSpectraXD.py, ExtractSpectraXD.py modules from XDGNIRS
+scienceReduction = True  ; same as for telluricReduction in one step gnirsReduce.py
+telluricCorrection = True  ; combines the HlineXD.py and TelluricXD.py modules from XDGNIRS
+fluxCalibration = True  ; combines the mag2mass.py and FluxCalibXD.py modules from XDGNIRS
+combineOrdersXD = True  ; runs the CombineOrdersXD.py module from XDGNIRS; must to be set to False for longslit mode
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
 
@@ -46,10 +37,10 @@ telluricTimeThreshold = 5400.0
 
 [calibrationReductionConfig]
 Start = 1
-Stop = 4
-cleanir_arcs = False
+Stop = 3
 cleanir_IRflats = False
 cleanir_QHflats = False
+cleanir_arcs = False
 cleanir_pinholes = False
 
 [telluricReductionConfig]
@@ -63,8 +54,8 @@ extraction_stepsize = 6
 [scienceReductionConfig]
 Start = 1
 Stop = 5
-skySubtraction = True
 cleanir = False
+skySubtraction = True
 
 [telluricCorrectionConfig]
 Start = 1
@@ -87,10 +78,7 @@ Stop = 6
 [combineOrdersXDConfig]
 Start = 1
 Stop = 6
-#mergeType = 'median'
-#use_pq_offsets = True
-#im3dtran = True
 
-#[writeDataSheetConfig]
+[writeDataSheetConfig]
 
 # Good luck with your Science!
