--- a/config.cfg
+++ b/config.cfg
@@ -11,15 +11,15 @@ telluricDirectoryList = ['/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/S
 calibrationDirectoryList = ['/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/Calibrations_ShortBlue_SXD_32_0.68arcsec_1.6499⁩']
 
 [gnirsPipelineConfig]
-data = True  ; searches for or downloads the required GNIRS data
-headers = True  ; reads all required header keywords and loads them in the beginning of every step of the pipeline
-sort = True  ; combines the ObsidentifyXD.py, mklist.csh, FindSpectra.py modules from XDGNIRS; cleanir.py module is not used as a part of this pipeline
-calibrationReduction = True  ; combines the StatsAnsPrepareXD.py, MakeFlatfieldXD.py, SdistorAndWLCalibXD.py modules from XDGNIRS
-telluricReduction = True  ; combines the StatsAnsPrepareXD.py, ReducingXD.py, CombineSpectraXD.py, ExtractSpectraXD.py modules from XDGNIRS
-scienceReduction = True  ; same as for telluricReduction in one step gnirsReduce.py
-telluricCorrection = True  ; combines the HlineXD.py and TelluricXD.py modules from XDGNIRS
-fluxCalibration = True  ; combines the mag2mass.py and FluxCalibXD.py modules from XDGNIRS
-combineOrdersXD = True  ; runs the CombineOrdersXD.py module from XDGNIRS; must to be set to False for longslit mode
+getdata = False              ; Download the required GNIRS data
+headers = True               ; Read all required header keywords - IS THIS REALLY AN OPTION?
+sort = True                  ; Combine the ObsidentifyXD.py, mklist.csh, FindSpectra.py modules from XDGNIRS; cleanir.py module is not used as a part of this pipeline
+calibrationReduction = True  ; Combine the StatsAnsPrepareXD.py, MakeFlatfieldXD.py, SdistorAndWLCalibXD.py modules from XDGNIRS
+telluricReduction = True     ; Combine the StatsAnsPrepareXD.py, ReducingXD.py, CombineSpectraXD.py, ExtractSpectraXD.py modules from XDGNIRS
+scienceReduction = True      ; same as for telluricReduction in one step gnirsReduce.py
+telluricCorrection = True    ; Combine the HlineXD.py and TelluricXD.py modules from XDGNIRS
+fluxCalibration = True       ; Combine the mag2mass.py and FluxCalibXD.py modules from XDGNIRS
+combineOrdersXD = True       ; Run the CombineOrdersXD.py module from XDGNIRS; must to be set to False for longslit mode
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
 
