--- a/recipes/defaultConfig.cfg
+++ b/recipes/defaultConfig.cfg
@@ -11,7 +11,7 @@ telluricDirectoryList = []
 calibrationDirectoryList = []
 
 [gnirsPipelineConfig]
-data = True  ; searches for or downloads the required GNIRS data
+getdata = True  ; searches for or downloads the required GNIRS data
 headers = True  ; reads all required header keywords and loads them in the beginning of every step of the pipeline
 sort = True  ; combines the ObsidentifyXD.py, mklist.csh, FindSpectra.py modules from XDGNIRS; cleanir.py module is not used as a part of this pipeline
 calibrationReduction = True  ; combines the StatsAnsPrepareXD.py, MakeFlatfieldXD.py, SdistorAndWLCalibXD.py modules from XDGNIRS
