--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -17,6 +17,9 @@ scienceOneDExtraction = True
 [TelluricDirectories]
 /Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499⁩/Tellurics/obsGN_2011A_Q_126_13 = True
 
+[CalibrationDirectories]
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499⁩/Calibrations = True
+
 [gnirsPipelineConfig]
 getdata = False              ; Download the required GNIRS data
 headers = True               ; Read all required header keywords - IS THIS REALLY AN OPTION?
