--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -7,20 +7,19 @@ manualMode = False
 overwrite = False
 scienceOneDExtraction = True
 
-#scienceDirectoryList = ['/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499⁩/obsGN_2011A_Q_126_6⁩']
-#telluricDirectoryList = ['/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499⁩/Tellurics/obsGN_2011A_Q_126_13']
-#calibrationDirectoryList = ['/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/Calibrations_ShortBlue_SXD_32_0.68arcsec_1.6499⁩']
-
 [ScienceDirectories]
 /Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Science/⁩GN_2011A_Q_126_6⁩ = True
 
 [TelluricDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499⁩/Tellurics/obsGN_2011A_Q_126_13 = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499⁩um/Tellurics/GN_2011A_Q_126_13 = True
+
+[CalibrationDirectories]
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499⁩um/Calibrations = True
 
 [gnirsPipelineConfig]
-getdata = False              ; Download the required GNIRS data
-headers = True               ; Read all required header keywords - IS THIS REALLY AN OPTION?
-sort = True                  ; Combine the ObsidentifyXD.py, mklist.csh, FindSpectra.py modules from XDGNIRS; cleanir.py module is not used as a part of this pipeline
+getData = True               ; Download the required GNIRS data
+sort = True                  ; Combine the ObsidentifyXD.py, mklist.csh, FindSpectra.py modules from XDGNIRS
+checkCalibrations = True     ; same as for sort
 calibrationReduction = True  ; Combine the StatsAnsPrepareXD.py, MakeFlatfieldXD.py, SdistorAndWLCalibXD.py modules from XDGNIRS
 telluricReduction = True     ; Combine the StatsAnsPrepareXD.py, ReducingXD.py, CombineSpectraXD.py, ExtractSpectraXD.py modules from XDGNIRS
 scienceReduction = True      ; same as for telluricReduction in one step gnirsReduce.py
@@ -30,7 +29,7 @@ combineOrdersXD = True       ; Run the CombineOrdersXD.py module from XDGNIRS; m
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
 
-[dataConfig]
+[getDataConfig]
 rawPath = rawData/
 program = ""
 
@@ -39,6 +38,8 @@ rawPath = rawData/
 proprietaryCookie = ""
 sortTellurics = True
 telluricTimeThreshold = 5400.0
+
+[checkCalibrationsConfig]
 
 [calibrationReductionConfig]
 Start = 1
