updated .gitignore, gnirsPipeline.py, gnirsSort.py, gnirsBaselineCalibration.py; and removed test

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -1,6 +1,3 @@
-# Nifty configuration file.
-# Each section lists parameters required by a pipeline step.
-
 [defaults]
 niftyVersion = "1.0.1"
 manualMode = False
@@ -8,34 +5,34 @@ overwrite = False
 scienceOneDExtraction = True
 
 [ScienceDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Science/⁩GN_2011A_Q_126_6⁩ = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Science/GN_2011A_Q_126_6 = True
 
 [TelluricDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499⁩um/Tellurics/GN_2011A_Q_126_13 = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tellurics/GN_2011A_Q_126_13 = True
 
 [CalibrationDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499⁩um/Calibrations = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Calibrations = True
 
 [gnirsPipelineConfig]
-getData = True               ; Download the required GNIRS data
-sort = True                  ; Combine the ObsidentifyXD.py, mklist.csh, FindSpectra.py modules from XDGNIRS
-checkCalibrations = True     ; same as for sort
-calibrationReduction = True  ; Combine the StatsAnsPrepareXD.py, MakeFlatfieldXD.py, SdistorAndWLCalibXD.py modules from XDGNIRS
-telluricReduction = True     ; Combine the StatsAnsPrepareXD.py, ReducingXD.py, CombineSpectraXD.py, ExtractSpectraXD.py modules from XDGNIRS
-scienceReduction = True      ; same as for telluricReduction in one step gnirsReduce.py
-telluricCorrection = True    ; Combine the HlineXD.py and TelluricXD.py modules from XDGNIRS
-fluxCalibration = True       ; Combine the mag2mass.py and FluxCalibXD.py modules from XDGNIRS
-combineOrdersXD = True       ; Run the CombineOrdersXD.py module from XDGNIRS; must to be set to False for longslit mode
+getData = True
+sort = True
+checkCalibrations = True
+calibrationReduction = True
+telluricReduction = True
+scienceReduction = True
+telluricCorrection = True
+fluxCalibration = True
+combineOrdersXD = True
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
 
 [getDataConfig]
 rawPath = rawData/
-program = ""
+program = 
 
 [sortConfig]
 rawPath = rawData/
-proprietaryCookie = ""
+proprietaryCookie = 
 sortTellurics = True
 telluricTimeThreshold = 5400.0
 
@@ -71,11 +68,11 @@ hLineInter = False
 continuumInter = False
 telluricInter = False
 tempInter = False
-standardStarSpecTemperature = ""
-standardStarMagnitude = ""
-standardStarRA = ""
-standardStarDec = ""
-standardStarBand = ""
+standardStarSpecTemperature = 
+standardStarMagnitude = 
+standardStarRA = 
+standardStarDec = 
+standardStarBand = 
 
 [fluxCalbrationConfig]
 Start = 1
@@ -87,4 +84,3 @@ Stop = 6
 
 [writeDataSheetConfig]
 
-# Good luck with your Science!
