gnirsBaselineCalibration.py is work in progress: wavelength calibration is the last step remaining. Logging is updated to include iraf logs. gnirsSort.py updated to append CalibrationDirectories section to gnirs.cfg file.

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -1,7 +1,7 @@
 [defaults]
 niftyVersion = "1.0.1"
 manualMode = False
-overwrite = False
+overwrite = True
 scienceOneDExtraction = True
 
 [ScienceDirectories]
@@ -39,8 +39,8 @@ telluricTimeThreshold = 5400.0
 [checkCalibrationsConfig]
 
 [calibrationReductionConfig]
-Start = 1
-Stop = 3
+Start = 4
+Stop = 4
 cleanir_IRflats = False
 cleanir_QHflats = False
 cleanir_arcs = False
