completed gnisrBaselineCalibration.py, updated README.md, and started gnirsReduce.py

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -13,7 +13,7 @@ scienceOneDExtraction = True
 [CalibrationDirectories]
 /Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Calibrations = True
 
-[gnirsPipelineConfig]
+[gnirsPipeline]
 getData = True
 sort = True
 checkCalibrations = True
@@ -26,41 +26,39 @@ combineOrdersXD = True
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
 
-[getDataConfig]
+[getData]
 rawPath = rawData/
 program = 
 
-[sortConfig]
+[sort]
 rawPath = rawData/
 proprietaryCookie = 
 sortTellurics = True
 telluricTimeThreshold = 5400.0
 
-[checkCalibrationsConfig]
+[checkCalibrations]
 
-[calibrationReductionConfig]
-Start = 4
-Stop = 4
+[calibrationReduction]
+Start = 1
+Stop = 5
 cleanir_IRflats = False
 cleanir_QHflats = False
 cleanir_arcs = False
 cleanir_pinholes = False
 
-[telluricReductionConfig]
+[telluricReduction]
 Start = 1
 Stop = 5
 cleanir = False
-skySubtraction = True
-extraction_aperture_radius = 4
-extraction_stepsize = 6
+extractionApertureRadius = 4
+extractionStepsize = 6
 
-[scienceReductionConfig]
+[scienceReduction]
 Start = 1
 Stop = 5
 cleanir = False
-skySubtraction = True
 
-[telluricCorrectionConfig]
+[telluricCorrection]
 Start = 1
 Stop = 9
 hLineMethod = "vega"
@@ -74,13 +72,13 @@ standardStarRA =
 standardStarDec = 
 standardStarBand = 
 
-[fluxCalbrationConfig]
+[fluxCalbration]
 Start = 1
 Stop = 6
 
-[combineOrdersXDConfig]
+[combineOrdersXD]
 Start = 1
 Stop = 6
 
-[writeDataSheetConfig]
+[writeDataSheet]
 
