modified gnirs.cfg and gnirsReduce.py

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -47,8 +47,8 @@ cleanir_arcs = False
 cleanir_pinholes = False
 
 [telluricReduction]
-Start = 1
-Stop = 5
+Start = 1  ; clean, nsprepare, bpm, nsreduce, combine (different), apply corrections, extract (different)
+Stop = 7
 cleanir = False
 extractionApertureRadius = 4
 extractionStepsize = 6
