The version of gnirsReduce.py updated as of Jul. 28, 2019.

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -5,13 +5,13 @@ overwrite = True
 scienceOneDExtraction = True
 
 [ScienceDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Science/GN_2011A_Q_126_6 = True
+/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Science/GN_2011A_Q_126_6 = True
 
 [TelluricDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tellurics/GN_2011A_Q_126_13 = True
+/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tellurics/GN_2011A_Q_126_13 = True
 
 [CalibrationDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Calibrations = True
+/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Calibrations = True
 
 [gnirsPipeline]
 getData = True
@@ -23,6 +23,7 @@ scienceReduction = True
 telluricCorrection = True
 fluxCalibration = True
 combineOrdersXD = True
+calcSNRspectrum = True
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
 
@@ -46,21 +47,21 @@ cleanir_QHflats = False
 cleanir_arcs = False
 cleanir_pinholes = False
 
-[telluricReduction]
-Start = 1  ; clean, nsprepare, bpm, nsreduce, combine (different), apply corrections, extract (different)
-Stop = 4
+[telluricReduction]  ; 
+Start = 1
+Stop = 2
 cleanir = False
-radiationEventCorrectionMethod = 'fixpix'  ; alternative is using 'dqplane' method
+radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
 radiationThreshold = 50
 extractionApertureRadius = 4
 extractionStepsize = 6
 
-[scienceReduction]
+[scienceReduction]  ; 
 Start = 1
-Stop = 4
+Stop = 2
 cleanir = False
-radiationEventCorrectionMethod = 'fixpix'  ; alternative is using 'dqplane' method
-radiationThreshold = 20
+radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
+radiationThreshold = 20 
 
 [telluricCorrection]
 Start = 1
@@ -83,6 +84,8 @@ Stop = 6
 [combineOrdersXD]
 Start = 1
 Stop = 6
+
+[calcSNRspectrum]
 
 [writeDataSheet]
 
