Jul. 29, 2019: gnirsBaselineCalibration.py and gnirsReduce.py morning updates

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -5,13 +5,13 @@ overwrite = True
 scienceOneDExtraction = True
 
 [ScienceDirectories]
-/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Science/GN_2011A_Q_126_6 = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Science/GN_2011A_Q_126_6 = True
 
 [TelluricDirectories]
-/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tellurics/GN_2011A_Q_126_13 = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tellurics/GN_2011A_Q_126_13 = True
 
 [CalibrationDirectories]
-/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Calibrations = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Calibrations = True
 
 [gnirsPipeline]
 getData = True
@@ -47,9 +47,9 @@ cleanir_QHflats = False
 cleanir_arcs = False
 cleanir_pinholes = False
 
-[telluricReduction]  ; 
+[telluricReduction]
 Start = 1
-Stop = 2
+Stop = 5
 cleanir = False
 radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
 radiationThreshold = 50
@@ -58,7 +58,7 @@ extractionStepsize = 6
 
 [scienceReduction]  ; 
 Start = 1
-Stop = 2
+Stop = 5
 cleanir = False
 radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
 radiationThreshold = 20 
