completed up to the step 6 nscombine in gnirsReduce.py

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -49,16 +49,16 @@ cleanir_pinholes = False
 
 [telluricReduction]
 Start = 1
-Stop = 5
+Stop = 6
 cleanir = False
 radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
 radiationThreshold = 50
 extractionApertureRadius = 4
 extractionStepsize = 6
 
-[scienceReduction]  ; 
+[scienceReduction]
 Start = 1
-Stop = 5
+Stop = 6
 cleanir = False
 radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
 radiationThreshold = 20 
