--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -49,19 +49,23 @@ cleanir_pinholes = False
 
 [telluricReduction]
 Start = 1
-Stop = 6
+Stop = 7
 cleanir = False
 radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
 radiationThreshold = 50
+useApall = False
 extractionApertureRadius = 4
 extractionStepsize = 6
 
 [scienceReduction]
 Start = 1
-Stop = 6
+Stop = 7
 cleanir = False
 radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
 radiationThreshold = 20 
+useApall = False
+extractionApertureRadius = 4
+extractionStepsize = 6
 
 [telluricCorrection]
 Start = 1
