new updates Jul. 30, 2019

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -5,13 +5,10 @@ overwrite = True
 scienceOneDExtraction = True
 
 [ScienceDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Science/GN_2011A_Q_126_6 = True
 
 [TelluricDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tellurics/GN_2011A_Q_126_13 = True
 
 [CalibrationDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Calibrations = True
 
 [gnirsPipeline]
 getData = True
@@ -23,7 +20,8 @@ scienceReduction = True
 telluricCorrection = True
 fluxCalibration = True
 combineOrdersXD = True
-calcSNRspectrum = True
+calcSNRspectrum = False
+writeDataSheet = True
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
 
