Jul. 20, 2019: updated gnirs.cfg and gnirsPipeline.py

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -15,12 +15,14 @@ getData = True
 sort = True
 checkCalibrations = True
 calibrationReduction = True
-telluricReduction = True
 scienceReduction = True
+telluricReduction = True
+combineSpectra2D = True
+extractSpectra1D = True
 telluricCorrection = True
 fluxCalibration = True
 combineOrdersXD = True
-calcSNRspectrum = False
+calculateSpectrumSNR = False
 writeDataSheet = True
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
@@ -30,7 +32,6 @@ rawPath = rawData/
 program = 
 
 [sort]
-rawPath = rawData/
 proprietaryCookie = 
 sortTellurics = True
 telluricTimeThreshold = 5400.0
@@ -45,22 +46,30 @@ cleanir_QHflats = False
 cleanir_arcs = False
 cleanir_pinholes = False
 
+[scienceReduction]
+Start = 1
+Stop = 5
+cleanir = False
+radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
+radiationThreshold = 20 
+
 [telluricReduction]
 Start = 1
-Stop = 7
+Stop = 5
 cleanir = False
 radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
 radiationThreshold = 50
+
+[combineSpectra2D]
+Start = 1
+Stop = 5
 useApall = False
 extractionApertureRadius = 4
 extractionStepsize = 6
 
-[scienceReduction]
+[extractSpectra1D]
 Start = 1
-Stop = 7
-cleanir = False
-radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
-radiationThreshold = 20 
+Stop = 5
 useApall = False
 extractionApertureRadius = 4
 extractionStepsize = 6
@@ -87,7 +96,7 @@ Stop = 6
 Start = 1
 Stop = 6
 
-[calcSNRspectrum]
+[calculateSpectrumSNR]
 
 [writeDataSheet]
 
