--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -36,7 +36,7 @@ proprietaryCookie =
 sortTellurics = True
 telluricTimeThreshold = 5400.0
 
-[checkCalibrations]
+[checkData]
 
 [calibrationReduction]
 Start = 1
