--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -5,15 +5,18 @@ overwrite = True
 scienceOneDExtraction = True
 
 [ScienceDirectories]
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Intermediate = True
 
 [TelluricDirectories]
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tel_GN_2011A_Q_126_13 = True
 
 [CalibrationDirectories]
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Calibrations = True
 
 [gnirsPipeline]
 getData = True
 sort = True
-checkCalibrations = True
+checkData = True
 calibrationReduction = True
 scienceReduction = True
 telluricReduction = True
@@ -50,14 +53,14 @@ cleanir_pinholes = False
 Start = 1
 Stop = 5
 cleanir = False
-radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
-radiationThreshold = 20 
+radiationEventCorrectionMethod = fixpix
+radiationThreshold = 20
 
 [telluricReduction]
 Start = 1
 Stop = 5
 cleanir = False
-radiationEventCorrectionMethod = fixpix  ; alternative is 'dqplane' or '' (blank) input
+radiationEventCorrectionMethod = fixpix
 radiationThreshold = 50
 
 [combineSpectra2D]
