--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -2,7 +2,6 @@
 niftyVersion = "1.0.1"
 manualMode = False
 overwrite = True
-scienceOneDExtraction = True
 
 [ScienceDirectories]
 /Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Intermediate = True
@@ -30,6 +29,15 @@ writeDataSheet = True
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
 
+[gnirsInter]
+nsprepareInter = False
+nsflatInter = False
+nscombineInter = False
+nssdist = False
+nswavelength = False
+nsfitcoords = False
+nsextract = False
+
 [getData]
 rawPath = rawData/
 program = 
@@ -40,6 +48,7 @@ sortTellurics = True
 telluricTimeThreshold = 5400.0
 
 [checkData]
+# No input parameters required
 
 [calibrationReduction]
 Start = 1
@@ -65,21 +74,22 @@ radiationThreshold = 50
 
 [combineSpectra2D]
 Start = 1
-Stop = 5
+Stop = 1  ;             ---------- TBD
 useApall = False
 extractionApertureRadius = 4
 extractionStepsize = 6
 
 [extractSpectra1D]
 Start = 1
-Stop = 5
+Stop = 1  ;             ---------- TBD
 useApall = False
 extractionApertureRadius = 4
+extractStepwise = False
 extractionStepsize = 6
 
 [telluricCorrection]
 Start = 1
-Stop = 9
+Stop = 1  ;             ---------- TBD
 hLineMethod = "vega"
 hLineInter = False
 continuumInter = False
@@ -93,13 +103,16 @@ standardStarBand =
 
 [fluxCalbration]
 Start = 1
-Stop = 6
+Stop = 1  ;             ---------- TBD
 
 [combineOrdersXD]
 Start = 1
-Stop = 6
+Stop = 1  ;             ---------- TBD
 
 [calculateSpectrumSNR]
+Start = 1
+Stop = 1  ;             ---------- TBD
 
 [writeDataSheet]
-
+Start = 1
+Stop = 1  ;             ---------- TBD
