Jul. 30, 2019: end of day updates

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -29,14 +29,14 @@ writeDataSheet = True
 telluricCorrectionMethod = "gnirs"
 fluxCalibrationMethod = "gnirs"
 
-[gnirsInter]
+[interactive]
 nsprepareInter = False
 nsflatInter = False
 nscombineInter = False
-nssdist = False
-nswavelength = False
-nsfitcoords = False
-nsextract = False
+nssdistInter = False
+nswavelengthInter = False
+nsfitcoordsInter = False
+nsextractInter = False
 
 [getData]
 rawPath = rawData/
@@ -44,7 +44,6 @@ program =
 
 [sort]
 proprietaryCookie = 
-sortTellurics = True
 telluricTimeThreshold = 5400.0
 
 [checkData]
@@ -53,23 +52,23 @@ telluricTimeThreshold = 5400.0
 [calibrationReduction]
 Start = 1
 Stop = 5
-cleanir_IRflats = False
-cleanir_QHflats = False
-cleanir_arcs = False
-cleanir_pinholes = False
+cleanir_IRflats = True
+cleanir_QHflats = True
+cleanir_arcs = True
+cleanir_pinholes = True
 
 [scienceReduction]
 Start = 1
 Stop = 5
 cleanir = False
-radiationEventCorrectionMethod = fixpix
+radiationCorrectionMethod = fixpix
 radiationThreshold = 20
 
 [telluricReduction]
 Start = 1
 Stop = 5
 cleanir = False
-radiationEventCorrectionMethod = fixpix
+radiationCorrectionMethod = fixpix
 radiationThreshold = 50
 
 [combineSpectra2D]
