--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -4,13 +4,13 @@ manualMode = False
 overwrite = True
 
 [ScienceDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Intermediate = True
+/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Intermediate = True
 
 [TelluricDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tel_GN_2011A_Q_126_13 = True
+/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tel_GN_2011A_Q_126_13 = True
 
 [CalibrationDirectories]
-/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Calibrations = True
+/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Calibrations = True
 
 [gnirsPipeline]
 getData = True
@@ -52,10 +52,10 @@ telluricTimeThreshold = 5400.0
 [calibrationReduction]
 Start = 1
 Stop = 5
-cleanir_IRflats = True
-cleanir_QHflats = True
-cleanir_arcs = True
-cleanir_pinholes = True
+cleanir_IRflats = False
+cleanir_QHflats = False
+cleanir_arcs = False
+cleanir_pinholes = False
 
 [scienceReduction]
 Start = 1
