gnirsReduce.py, gnirsCombineSpectra2D.py, gnirsExtractSpectra1D.py updated

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -4,13 +4,13 @@ manualMode = False
 overwrite = True
 
 [ScienceDirectories]
-/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Intermediate = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Intermediate = True
 
 [TelluricDirectories]
-/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tel_GN_2011A_Q_126_13 = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tel_GN_2011A_Q_126_13 = True
 
 [CalibrationDirectories]
-/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Calibrations = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Calibrations = True
 
 [gnirsPipeline]
 getData = True
@@ -58,7 +58,7 @@ cleanir_arcs = False
 cleanir_pinholes = False
 
 [scienceReduction]
-Start = 1
+Start = 3
 Stop = 5
 cleanir = False
 radiationCorrectionMethod = fixpix
@@ -72,15 +72,9 @@ radiationCorrectionMethod = fixpix
 radiationThreshold = 50
 
 [combineSpectra2D]
-Start = 1
-Stop = 1  ;             ---------- TBD
-useApall = False
-extractionApertureRadius = 4
-extractionStepsize = 6
+# No input parameters required
 
 [extractSpectra1D]
-Start = 1
-Stop = 1  ;             ---------- TBD
 useApall = False
 extractionApertureRadius = 4
 extractStepwise = False
