--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -4,13 +4,13 @@ manualMode = False
 overwrite = True
 
 [ScienceDirectories]
-/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Intermediate = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Intermediate = True
 
 [TelluricDirectories]
-/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tel_GN_2011A_Q_126_13 = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Tel_GN_2011A_Q_126_13 = True
 
 [CalibrationDirectories]
-/Users/viraja/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Calibrations = True
+/Users/vkhatu/GitHub/GNIRS_PIPELINE/NGC4736/20110516/ShortBlue_SXD_32_0.68arcsec_1.6499um/Sci_GN_2011A_Q_126_6/Calibrations = True
 
 [gnirsPipeline]
 getData = True
@@ -37,6 +37,10 @@ nssdistInter = False
 nswavelengthInter = False
 nsfitcoordsInter = False
 nsextractInter = False
+hLineInter = False
+continuumInter = False
+telluricInter = False
+tempInter = False
 
 [getData]
 rawPath = rawData/
@@ -58,7 +62,7 @@ cleanir_arcs = False
 cleanir_pinholes = False
 
 [scienceReduction]
-Start = 3
+Start = 1
 Stop = 5
 cleanir = False
 radiationCorrectionMethod = fixpix
@@ -75,8 +79,10 @@ radiationThreshold = 50
 # No input parameters required
 
 [extractSpectra1D]
-useApall = False
+useApall = True  ; if False, set apertureTracingColumns = 10
+#apertureTracingColumns = 20
 extractionApertureRadius = 4
+toleranceOffset = 5
 extractStepwise = False
 extractionStepsize = 6
 
@@ -84,10 +90,6 @@ extractionStepsize = 6
 Start = 1
 Stop = 1  ;             ---------- TBD
 hLineMethod = "vega"
-hLineInter = False
-continuumInter = False
-telluricInter = False
-tempInter = False
 standardStarSpecTemperature = 
 standardStarMagnitude = 
 standardStarRA = 
