Aug. 2: early morning updates

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -67,6 +67,7 @@ Stop = 5
 cleanir = False
 radiationCorrectionMethod = fixpix
 radiationThreshold = 20
+checkPeaksMatch = True
 
 [telluricReduction]
 Start = 1
