--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -84,7 +84,7 @@ useApall = True  ; if False, set apertureTracingColumns = 10
 #apertureTracingColumns = 20
 extractionApertureRadius = 4
 toleranceOffset = 5
-extractStepwise = False
+extractionStepwise = False
 extractionStepsize = 6
 
 [telluricCorrection]
