updated gnirs.cfg, gnirsReduce.py, gnirsBaselineCalibration.py, gnirsExtractSpectra1D.py; started working on gnirsTelluric.py

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -86,20 +86,22 @@ extractionApertureRadius = 4
 toleranceOffset = 5
 extractionStepwise = False
 extractionStepsize = 6
+extractionStepradius = 21
 
 [telluricCorrection]
 Start = 1
-Stop = 1  ;             ---------- TBD
+Stop = 7
 hLineMethod = "vega"
-standardStarSpecTemperature = 
-standardStarMagnitude = 
-standardStarRA = 
-standardStarDec = 
-standardStarBand = 
+telluricRA = 
+telluricDEC = 
+telluricSpectralType =   ;  Viraja:  Is it okay to give spectral type as a parameter if SIMBAD is not able to find it?
+telluricMagnitude = 
+telluricTemperature = 
 
 [fluxCalbration]
 Start = 1
 Stop = 1  ;             ---------- TBD
+telluricBand = 
 
 [combineOrdersXD]
 Start = 1
