completed gnirsTelluric.py

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -26,8 +26,8 @@ fluxCalibration = True
 combineOrdersXD = True
 calculateSpectrumSNR = False
 writeDataSheet = True
-telluricCorrectionMethod = "gnirs"
-fluxCalibrationMethod = "gnirs"
+telluricCorrectionMethod = gnirs
+fluxCalibrationMethod = gnirs
 
 [interactive]
 nsprepareInter = False
@@ -89,9 +89,9 @@ extractionStepsize = 6
 extractionStepradius = 21
 
 [telluricCorrection]
-Start = 1
-Stop = 7
-hLineMethod = "vega"
+Start = 2
+Stop = 2
+hLineMethod = vega
 telluricRA = 
 telluricDEC = 
 telluricSpectralType =   ;  Viraja:  Is it okay to give spectral type as a parameter if SIMBAD is not able to find it?
