--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -93,16 +93,16 @@ extractionStepradius = 21
 Start = 1
 Stop = 5
 hLineMethod = vega
-telluricRA = 
-telluricDEC = 
-telluricSpectralType =   ;  viraja:  Is it okay to give spectral type as a parameter if SIMBAD is not able to find it?
-telluricMagnitude = 
-telluricTemperature = 
 
 [fluxCalbration]
 Start = 1
-Stop = 1  ;             ---------- TBD
+Stop = 1
 telluricBand = 
+telluricRA = 
+telluricDEC = 
+telluricSpectralType =  
+telluricMagnitude = 
+telluricTemperature = 
 
 [combineOrdersXD]
 Start = 1
