updated gnires.cfg but csn be ignored

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -1,5 +1,5 @@
 [defaults]
-niftyVersion = "1.0.1"
+niftyVersion = 1.0.1
 manualMode = False
 overwrite = True
 
@@ -26,8 +26,6 @@ fluxCalibration = True
 combineOrdersXD = True
 calculateSpectrumSNR = False
 writeDataSheet = True
-telluricCorrectionMethod = gnirs
-fluxCalibrationMethod = gnirs
 
 [interactive]
 nsprepareInter = False
@@ -84,10 +82,9 @@ useApall = True
 extractionApertureRadius = 4
 checkPeaksMatch = True
 toleranceOffset = 5
-extractionFullslit = False
+extractionFullSlit = False
 extractionStepwise = False
-extractionStepsize = 6
-extractionStepradius = 21
+extractionStepNumber = 6  ; units [pixels]
 
 [telluricCorrection]
 Start = 1
@@ -97,7 +94,6 @@ hLineMethod = vega
 [fluxCalbration]
 Start = 1
 Stop = 1
-telluricBand = 
 telluricRA = 
 telluricDEC = 
 telluricSpectralType =  
