--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -34,7 +34,7 @@ nscombineInter = False
 nssdistInter = False
 nswavelengthInter = False
 nsfitcoordsInter = False
-nsextractInter = True
+nsextractInter = False
 hLineInter = False
 continuumInter = False
 telluricInter = False
@@ -52,7 +52,7 @@ telluricTimeThreshold = 5400.0
 # No input parameters required
 
 [calibrationReduction]
-Start = 5
+Start = 1
 Stop = 5
 cleanir_IRflats = False
 cleanir_QHflats = False
@@ -84,7 +84,7 @@ checkPeaksMatch = True
 toleranceOffset = 5
 extractionFullSlit = False
 extractionStepwise = False
-extractionStepNumber = 6  ; units [pixels]
+extractionStepSize = 6  ; units [pixels]
 
 [telluricCorrection]
 Start = 1
@@ -93,7 +93,7 @@ hLineMethod = vega
 
 [fluxCalbration]
 Start = 1
-Stop = 1
+Stop = 
 telluricRA = 
 telluricDEC = 
 telluricSpectralType =  
@@ -120,7 +120,7 @@ Stop = 1  ;             ---------- TBD
 7 = 9000:10000
 8 = 8500:9500
 
-[HLineRegions]
+[HLineRegions]  ; regions to use when tweaking the H line removal
 3 = 21400:21900
 4 = 15500:18000
 5 = 12750:12900
@@ -128,7 +128,7 @@ Stop = 1  ;             ---------- TBD
 7 = 9000:10500
 8 = 8500:9300
 
-[ContinuumRegions]
+[ContinuumRegions]  ; regions to use when fitting the Telluric continuum
 3 = *
 4 = *
 5 = 11200:13300,14300:15200
