--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -1,7 +1,6 @@
 # GNIRS-Pype configuration file.
 
 [defaults]
-niftyVersion = 1.0.1
 manualMode = False
 overwrite = True
 
@@ -48,7 +47,7 @@ program =
 
 [sort]
 proprietaryCookie = 
-telluricTimeThreshold = 5400.0
+telluricTimeThreshold = 5400  ; seconds [5400]
 
 [checkData]
 # No input parameters required
@@ -91,7 +90,7 @@ extractionStepSize = 6  ; units [pixels]
 [telluricCorrection]
 Start = 1
 Stop = 5
-hLineMethod = vega
+hLineMethod = vega  ; Hydrogen line remove method.  Options: vega, ...
 
 [fluxCalbration]
 Start = 1
@@ -114,7 +113,7 @@ Stop = 1  ;             ---------- TBD
 Start = 1
 Stop = 1  ;             ---------- TBD
 
-[TelluricRegions]  ; regions to use when tweaking the Telluric line removal
+[TelluricRegions]  ; Regions to use when tweaking the Telluric line removal (order = start:end)
 3 = *
 4 = 14200:18000
 5 = 11200:13400,14200:15200
@@ -122,7 +121,7 @@ Stop = 1  ;             ---------- TBD
 7 = 9000:10000
 8 = 8500:9500
 
-[HLineRegions]  ; regions to use when tweaking the H line removal
+[HLineRegions]  ; Regions to use when tweaking the H line removal
 3 = 21400:21900
 4 = 15500:18000
 5 = 12750:12900
