Progress made on gnirsGetTelluricInfo.py anf gnirsFluxCalibrate.py

--- a/gnirs-pype/gnirs.cfg
+++ b/gnirs-pype/gnirs.cfg
@@ -3,16 +3,16 @@ manualMode = False
 overwrite = True
 
 [ScienceDirectories]
-/Users/viraja/GitHub/GNIRS-Pype/gnirs-pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6 = True
+/Users/vkhatu/GitHub/GNIRS-Pype/gnirs-pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6 = True
 
 [TelluricDirectories]
-/Users/viraja/GitHub/GNIRS-Pype/gnirs-pype/HIP65159_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
+/Users/vkhatu/GitHub/GNIRS-Pype/gnirs-pype/HIP65159_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
 
 [StandardDirectories]
-/Users/viraja/GitHub/GNIRS-Pype/gnirs-pype/STD_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
+/Users/vkhatu/GitHub/GNIRS-Pype/gnirs-pype/STD_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
 
 [CalibrationDirectories]
-/Users/viraja/GitHub/GNIRS-Pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6/Calibrations = True
+/Users/vkhatu/GitHub/GNIRS-Pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6/Calibrations = True
 
 [gnirsPipeline]
 getData = False
@@ -46,10 +46,10 @@ tempInter = False
 combinedarc = arc_comb.fits
 combinedsrc = src_comb.fits
 combinedsky = sky_comb.fits
-extractRegularPrefix = v  ; abbreviated as "REG" for telluric prefixes
-extractFullSlitPrefix = a  ;  abbreviated as "FS" to keep the key name shorter for the telluric prefix
+extractRegularPrefix = v
+extractFullSlitPrefix = a
 extractStepwiseTracePrefix = x
-extractStepwisePrefix = s  ; abbreviated as "SW" to keep the key name shorter for the telluric prefix
+extractStepwisePrefix = s
 hLinePrefix = hv
 fitContinuumPrefix_tel = fithv
 dividedTelluricPrefix = dhv
@@ -111,20 +111,18 @@ Stop = 5
 hLineMethod = vega
 
 [fluxCalibration]
-Start = 1  ; If fluxCalibrationMethod = telluricapproximate, valid Start = 1.  If fluxcalibrator, valid Start = 1.
-Stop = 4  ; If fluxCalibrationMethod = telluricapproximate, valid Stop = 4.  If fluxcalibrator, valid Stop = 2
-fluxCalibrationMethod = telluricapproximate  ; Method for flux calibration.  Options are: telluricapproximate or fluxcalibrator. 
+Start = 1
+Stop = 4
+fluxCalibrationMethod = telluricapproximate
 referenceStarTableFilename = stars_spectraltypes_temperatures.txt
 
 [combineOrdersXD]
-# no input parameters required
 
 [calculateSpectrumSNR]
 Start = 1
 Stop = 1
 
 [writeDataSheet]
-# no input parameters required
 
 [telluricRegions]
 3 = *
@@ -149,4 +147,13 @@ Stop = 1
 6 = 9500:10900,11700:12600
 7 = 8500:9200,9800:10700
 8 = 7500:9500
+
+[HIP65159]
+stdRA = 
+stdDEC = 
+stdSpectralType = 
+stdTemperature = 
+stdMagnitudeK = 
+stdMagnitudeH = 
+stdMagnitudeJ = 
 
