gnirsFluxCalibration.py complete

--- a/gnirs-pype/gnirs.cfg
+++ b/gnirs-pype/gnirs.cfg
@@ -3,16 +3,16 @@ manualMode = False
 overwrite = True
 
 [ScienceDirectories]
-/Users/vkhatu/GitHub/GNIRS-Pype/gnirs-pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6 = True
+/Users/viraja/GitHub/GNIRS-Pype/gnirs-pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6 = True
 
 [TelluricDirectories]
-/Users/vkhatu/GitHub/GNIRS-Pype/gnirs-pype/HIP65159_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
+/Users/viraja/GitHub/GNIRS-Pype/gnirs-pype/HIP65159_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
 
 [StandardDirectories]
-/Users/vkhatu/GitHub/GNIRS-Pype/gnirs-pype/STD_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
+/Users/viraja/GitHub/GNIRS-Pype/gnirs-pype/STD_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
 
 [CalibrationDirectories]
-/Users/vkhatu/GitHub/GNIRS-Pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6/Calibrations = True
+/Users/viraja/GitHub/GNIRS-Pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6/Calibrations = True
 
 [gnirsPipeline]
 getData = False
@@ -59,7 +59,11 @@ telluricPrefix_extractSW = us
 dividedSciencePrefix_extractREG = duv
 dividedSciencePrefix_extractFS = dua
 dividedSciencePrefix_extractSW = dus
-fluxCalibPrefix = 
+bb_unscaled = blackbody_order
+bb_scaled = scaled_blackbody_order
+fluxCalibPrefix_extractREG = bduv
+dividedSciencePrefix_extractFS = bdua
+dividedSciencePrefix_extractSW = bdus
 
 [getData]
 rawPath = rawData/
@@ -149,11 +153,20 @@ Stop = 1
 8 = 7500:9500
 
 [HIP65159]
-stdRA = 
-stdDEC = 
-stdSpectralType = 
-stdTemperature = 
-stdMagnitudeK = 
-stdMagnitudeH = 
-stdMagnitudeJ = 
+fluxZeroPoint_order3 = 4.283e-10
+fluxZeroPoint_order4 = 1.13e-09
+fluxZeroPoint_order5 = 3.129e-10
+fluxZeroPoint_order6 = 3.129e-10
+fluxZeroPoint_order7 = 3.129e-10
+fluxZeroPoint_order8 = 3.129e-10
+stdRA = 200.29537083
+stdDEC = 37.85710833
+stdSpectralType = F8V
+stdTemperature = 6175
+stdMagnitude_order3 = 5.552
+stdMagnitude_order4 = 5.618
+stdMagnitude_order5 = 5.853
+stdMagnitude_order6 = 5.853
+stdMagnitude_order7 = 5.853
+stdMagnitude_order8 = 5.853
 
