--- a/gnirs-pype/gnirs.cfg
+++ b/gnirs-pype/gnirs.cfg
@@ -3,16 +3,16 @@ manualMode = False
 overwrite = True
 
 [ScienceDirectories]
-/Users/viraja/GitHub/GNIRS-Pype/gnirs-pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6 = True
+/Users/vkhatu/GitHub/GNIRS-Pype/gnirs-pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6 = True
 
 [TelluricDirectories]
-/Users/viraja/GitHub/GNIRS-Pype/gnirs-pype/HIP65159_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
+/Users/vkhatu/GitHub/GNIRS-Pype/gnirs-pype/HIP65159_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
 
 [StandardDirectories]
-/Users/viraja/GitHub/GNIRS-Pype/gnirs-pype/STD_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
+/Users/vkhatu/GitHub/GNIRS-Pype/gnirs-pype/STD_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-13 = True
 
 [CalibrationDirectories]
-/Users/viraja/GitHub/GNIRS-Pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6/Calibrations = True
+/Users/vkhatu/GitHub/GNIRS-Pype/NGC4736_20110516_SB_SXD_32_0.68arcsec_1.6499um_GN-2011A-Q-126-6/Calibrations = True
 
 [gnirsPipeline]
 getData = False
@@ -153,12 +153,12 @@ Stop = 1
 8 = 7500:9500
 
 [HIP65159]
-fluxZeroPoint_order3 = 4.283e-10
-fluxZeroPoint_order4 = 1.13e-09
-fluxZeroPoint_order5 = 3.129e-10
-fluxZeroPoint_order6 = 3.129e-10
-fluxZeroPoint_order7 = 3.129e-10
-fluxZeroPoint_order8 = 3.129e-10
+zeroMagnitudeFlux_order3 = 4.283e-11  ; erg.....
+zeroMagnitudeFlux_order4 = 1.13e-10
+zeroMagnitudeFlux_order5 = 3.129e-10
+zeroMagnitudeFlux_order6 = 3.129e-10
+zeroMagnitudeFlux_order7 = 3.129e-10
+zeroMagnitudeFlux_order8 = 3.129e-10
 stdRA = 200.29537083
 stdDEC = 37.85710833
 stdSpectralType = F8V
