Fix link-cals so that it only compares observations with the same config.  Switch to the AURA license.

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -1,10 +1,12 @@
 [defaults]
 manualMode = False
 overwrite = True
+runtimeData = /home/astephens/github/GNIRS-Pype/runtimeData/  ; TODO: FIXME
 
 [getData]
-rawPath = rawData/
-program = 
+RawDataDir = /home/astephens/github/GNIRS-Pype/rawData/  ; where the raw data are or where they should be downloaded to
+Program = None  ; Program ID to download from the Gemini archive
+ObsIDs = None  ; List of observation IDs to download from the Gemini Archive
 
 [ScienceDirectories]
 
